--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -22,9 +22,9 @@ jobs:
           node-version-file: .nvmrc
           cache: npm
       - run: npm clean-install
-      - run: npm install semantic-release @traverson/semantic-release-config --no-save
+      - run: npm install semantic-release@beta @traverson/semantic-release-config --no-save
       - name: semantic-release
-        run: npx semantic-release@beta
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
